# trinix

./: README.md  dev-requirements.txt  format_repo.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
benchmarks/: ACTIVATION.md  ATTENTION.md  BENCHMARK_RESULTS.md  EMBEDDINGS.md  NORMALIZATION.md  OPTIMIZER.md  benchmark_alibi.py  benchmark_rope.py
examples/: triton_attention_example.py
fastlayers/: __init__.py
fastlayers/kernels/: alibi_kernel.py  attention_kernel.py  layernorm_kernel.py  swigelu_kernel.py
fastlayers/layers/: __init__.py
fastlayers/layers/activation/: __init__.py  geglu.py
fastlayers/layers/attention/: __init__.py  base.py  grouped_query_attention.py  multi_query_attention.py  multihead_latent_attention.py  multihead_self_attention.py
fastlayers/layers/norm/: layernorm.py  rmsnorm.py
flashlm/: __init__.py  utils.py
flashlm/kernels/: __init__.py  alibi_kernel.py  layernorm_kernel.py  relative_kernel.py  rmsnorm_kernel.py  rope_kernel.py  utils.py
flashlm/layers/: __init__.py
flashlm/layers/activation/: swigelu.py
flashlm/layers/attention/: __init__.py  base.py  grouped_query_attention.py  multi_query_attention.py  multihead_attention.py  multihead_self_attention.py
flashlm/layers/embeddings/: __init__.py  alibi.py  relative.py  rope.py
flashlm/layers/norm/: __init__.py  layernorm.py  rmsnorm.py
trinix/: __init__.py  fusion.py  version.py
trinix/aug/: __init__.py  compose.py
trinix/kernels/: __init__.py  adam_kernel.py  adamw_kernel.py  alibi_kernel.py  attention_kernel.py  geglu_kernel.py  int8_quant_kernel.py  layernorm_kernel.py  lion_kernel.py  mish_kernel.py  quickgelu_kernel.py  reglu_kernel.py  relative_kernel.py  rmsnorm_kernel.py  rope_kernel.py  squared_relu_kernel.py  swigelu_kernel.py  utils.py
trinix/kernels/fused/: __init__.py  residual_layernorm_kernel.py  residual_rmsnorm_kernel.py  rmsnorm_activation_kernel.py
trinix/layers/: __init__.py
trinix/layers/activation/: __init__.py  geglu.py  mish.py  quickgelu.py  reglu.py  squared_relu.py  swigelu.py
trinix/layers/attention/: __init__.py  base.py  functional.py  grouped_query_attention.py  multi_query_attention.py  multihead_attention.py  multihead_latent_attention.py  multihead_self_attention.py
trinix/layers/embeddings/: __init__.py  alibi.py  relative.py  rope.py
trinix/layers/fused/: __init__.py  elementwise_chain.py  residual_layernorm.py  residual_rmsnorm.py  rmsnorm_activation.py
trinix/layers/norm/: __init__.py  layernorm.py  rmsnorm.py
trinix/optim/: __init__.py  adam.py  adamw.py  lion.py
trinix/optimizers/: __init__.py
trinix/quant/: __init__.py  int8_quant.py  utils.py
