[build-system]
requires = ["setuptools==80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trinix"
dynamic = ["version"]
description = "High-performance PyTorch layers with optimized Triton kernels and Flash Attention support"
authors = [
    { name = "Gitesh" }
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = "Apache-2.0"
keywords = ["triton", "flash attention", "pytorch", "llm", "machine learning", "deep learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
    "flash-attn>=2.0.0",
    "triton>=2.0.0",
    "numpy",
]

[tool.setuptools]
packages = ["trinix"]

[project.urls]
documentation = "https://github.com/IMvision12/trinix"
repository = "https://github.com/IMvision12/trinix"